--- a/assets/css/animated.css
+++ b/assets/css/animated.css
@@ -14,7 +14,19 @@ Copyright (c) 2014 Daniel Eden
   font-family: 'Bad Script', cursive;
 }
 
+.bluedefondo{
+  color: #527DEE;
+}
 
+.otroblue{
+  color: #2832C2;
+}
+
+.amarillo{
+  color: #FCC731;
+}
+
+.job-title { color:teal; padding:3px 0; margin:5px 0; font-style:italic; }
 
 .animated {
   -webkit-animation-duration: 1s;
